--- a/HolographicJS/HolographicJS.vcxproj.filters
+++ b/HolographicJS/HolographicJS.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="Console.cpp">
       <Filter>Runtime\Globals</Filter>
     </ClCompile>
-    <ClCompile Include="SetTimeout.cpp">
-      <Filter>Runtime\Globals</Filter>
-    </ClCompile>
     <ClCompile Include="Window.cpp">
       <Filter>Runtime\Globals</Filter>
     </ClCompile>
@@ -43,14 +40,12 @@
     <ClCompile Include="WebGLActiveInfo.cpp">
       <Filter>Runtime\Globals\Window\Document\WebGL</Filter>
     </ClCompile>
+    <ClCompile Include="Binding.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Console.h">
-      <Filter>Runtime\Globals</Filter>
-    </ClInclude>
-    <ClInclude Include="SetTimeout.h">
       <Filter>Runtime\Globals</Filter>
     </ClInclude>
     <ClInclude Include="Window.h">
@@ -63,6 +58,7 @@
     <ClInclude Include="WebGLActiveInfo.h">
       <Filter>Runtime\Globals\Window\Document\WebGL</Filter>
     </ClInclude>
+    <ClInclude Include="Binding.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libEGL.dll">
