--- a/HolographicJS/HolographicJS.vcxproj.filters
+++ b/HolographicJS/HolographicJS.vcxproj.filters
@@ -41,6 +41,7 @@
       <Filter>Runtime\Globals\Window\Document\WebGL</Filter>
     </ClCompile>
     <ClCompile Include="Binding.cpp" />
+    <ClCompile Include="Task.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -59,6 +60,7 @@
       <Filter>Runtime\Globals\Window\Document\WebGL</Filter>
     </ClInclude>
     <ClInclude Include="Binding.h" />
+    <ClInclude Include="Task.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libEGL.dll">
@@ -67,5 +69,6 @@
     <None Include="libGLESv2.dll">
       <Filter>Binaries</Filter>
     </None>
+    <None Include="SharingManager.js" />
   </ItemGroup>
 </Project>
